--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#myVideo{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  top:0;
+  min-width: 100%; 
+  min-height: 100%;
+  z-index: 0;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.content {
+  position: absolute;
+    left: 30%;
+    top: 30%;
+    border: 2px solid white;
+    display: inline !important;
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    display: flex;
+    flex-grow: 2;
+    height: 300px;
+    padding: 100px;
+    font-size: 28px;
+    box-shadow: 0 0 20px rgba(192, 21, 21, 0.8);
+}
+
+@media screen and (max-width: 768px) {
+   
+  .content{
+    left:0;
+    padding-top: 105px;
+    padding-right: 30px;
+    padding-left: 22px;
+    width: 100%;
+   
+ 
+
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
